--- a/lenxel-theme-support-update-plugin.json
+++ b/lenxel-theme-support-update-plugin.json
@@ -4,7 +4,7 @@
     "homepage": "http://lenxel.ogunlabs.com/",
     "version": "1.0.0",
     "requires": "5.5",
-    "author": "Lenxelthemes",
+    "author": "Ogunlabs",
     "author_homepage": "http://lenxel.ogunlabs.com/",
     "download_url": "http://lenxel.ogunlabs.com/plugins/lenxel-theme-support.zip",
     "sections": {
